# ubuntu-desktop-installer-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/superpowers/plans/: 2026-06-29-ubuntu-desktop-iso-dashboard.md  2026-06-30-dashboard-architecture-filter.md  2026-06-30-dashboard-card-status-colors.md  2026-06-30-dashboard-iso-current-old-status.md  2026-06-30-dashboard-ui-refinement.md  2026-06-30-render-derived-iso-status.md  2026-06-30-snap-channel-data.md  2026-06-30-subiquity-snap-channel-comparison.md
docs/superpowers/specs/: 2026-06-29-ubuntu-desktop-iso-dashboard-design.md  2026-06-30-dashboard-architecture-filter-design.md  2026-06-30-dashboard-card-status-colors-design.md  2026-06-30-dashboard-iso-current-old-status-design.md  2026-06-30-dashboard-ui-refinement-design.md  2026-06-30-render-derived-iso-status-design.md  2026-06-30-snap-channel-data-design.md  2026-06-30-subiquity-snap-channel-comparison-design.md
src/iso_dashboard/: cli.py  collector.py  config.py  github.py  models.py  parsers.py  render.py  snapcraft.py
tests/: test_cli.py  test_collector.py  test_config_models.py  test_github.py  test_parsers.py  test_render.py  test_snapcraft.py
tests/fixtures/: cdimage_pending.html  example.manifest
